@@ -1,7 +1,22 @@
 {
-  "count": 3,
+  "count": 5,
   "uniques": 3,
   "views": [
+    {
+      "timestamp": "2025-12-16T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2025-12-17T00:00:00Z",
+      "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-12-18T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
     {
       "timestamp": "2025-12-19T00:00:00Z",
       "count": 1,
@@ -56,21 +71,6 @@
       "timestamp": "2025-12-29T00:00:00Z",
       "count": 0,
       "uniques": 0
-    },
-    {
-      "timestamp": "2025-12-30T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2025-12-31T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
     }
   ]
 }
