@@ -1,3 +1,12 @@
+2026-01-03T12:26:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20677244001 # 1405
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-03
+* notice: last 14d: unq all: 3 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 1114 3194 / 1117 3197
+* notice: next accum: outdated-unq outdated-all / unq all: 1114 3194 / 1117 3199
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-01-03T01:05:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20670012927 # 1404
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-03
